<resources>
    <string name="app_name">User Activity Register</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>

    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="e_mail">E mail</string>
    <string name="phone_number">Phone Number</string>

</resources>